# TimerWolvesVision_buff2022

./: 10.avi  CMakeLists.txt  README.md  main.cpp  main.hpp
angle_solve/: abstract_pnp.hpp  basic_pnp.hpp
armor/: basic_armor.cpp  basic_armor.hpp  fan_armor.cpp  fan_armor.hpp
buff/: abstract_blade.hpp  abstract_center_r.hpp  abstract_target.hpp  basic_buff.cpp  basic_buff.hpp
configs/record/: 10.avi
devices/camera/: mv_video_capture.cpp  mv_video_capture.hpp
devices/serial/: uart_serial.cpp  uart_serial.hpp
record/: record.cpp  record.hpp
roi/: abstract_roi.hpp  basic_roi.cpp  basic_roi.hpp
